# spc2it

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.rst  emu.c  emu.h  emu.moon  it.c  it.h  it.moon  main.c  main.moon  meson.build  readme.md  sneese_spc.h  sound.c  sound.h  sound.moon  spc2ittypes.h  spc700.c
.github/workflows/: ci.yml
doc/: OPENSPC.TXT  SOURCE.TXT
